?? ??? 2010, PHP 5.3.4
- Upgraded bundled Sqlite3 to version 3.7.3. (Ilia)
- Upgraded bundled PCRE to version 8.10. (Ilia)

- Added follow_location (enabled by default) option for the http stream 
  support. (Pierre)
- Added new character sets to mysqlnd, which are available in MySQL 5.5
  (Andrey)
- Improved support for is_link and related functions on Windows. (Pierre)

- Implemented symbolic links support for open_basedir checks. (Pierre)
- Implemented FR #51804, SplFileInfo::getLinkTarget on Windows. (Pierre)
- Implemented FR #50692, not uploaded files don't count towards
  max_file_uploads limit. As a side improvement, temporary files are not opened
  for empty uploads and, in debug mode, 0-length uploads. (Gustavo)
- Added a 3rd parameter to get_html_translation_table. It now takes a charset
  hint, like htmlentities et al. (Gustavo)
- Implemented FR #44164, setting the header "Content-length" implicitly
  disables zlib.output_compression.

- Fixed NULL pointer dereference in ZipArchive::getArchiveComment.
  (CVE-2010-3709). (Maksymilian Arciemowicz)
- Fixed possible flaw in open_basedir (CVE-2010-3436). (Pierre)
- Fixed MOPS-2010-24, fix string validation. (CVE-2010-2950). (Pierre)
- Fixed symbolic resolution support when the target is a DFS share. (Pierre)
- Changed deprecated ini options on startup from E_WARNING to E_DEPRECATED. 
  (Kalle)
- Changed the $context parameter on copy() to actually have an effect. (Kalle)
- Fixed possible crash in mssql_fetch_batch(). (Kalle)
- Fixed inconsistent backlog default value (-1) in FPM on many systems. (fat)
- Fixed bug in the Windows implementation of dns_get_record, where the two
  last parameters wouldn't be filled unless the type were DNS_ANY (Gustavo).
- Fixed forward stream seeking emulation in streams that don't support seeking
  in situations where the read operation gives back less data than requested
  and when there was data in the buffer before the emulation started. Also made